Bug 26458 - UBSAN error: bfd/elf32-i386.c:3615:21:
Summary: UBSAN error: bfd/elf32-i386.c:3615:21:
Status: RESOLVED FIXED
Alias: None
Product: binutils
Classification: Unclassified
Component: binutils (show other bugs)
Version: 2.34
: P2 normal
Target Milestone: 2.36
Assignee: Alan Modra
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-08-20 12:28 UTC by Martin Liska
Modified: 2020-08-26 14:38 UTC (History)
0 users

See Also:
Host:
Target:
Build:
Last reconfirmed: 2020-08-26 00:00:00


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Martin Liska 2020-08-20 12:28:23 UTC
The following fails when I build binutils with:
configure --build=x86_64-linux --disable-nls --disable-gdb --disable-gdbserver --disable-sim --disable-readline --disable-libdecnumber --enable-obsolete --target=i686-vxworks CFLAGS="-g -O2 -fsanitize=address,undefined -Wno-error" CXXLAGS="-g -O2 -fsanitize=address,undefined -Wno-error" LDFLAGS="-ldl"
Target: i686-vxworks
PASS: VxWorks shared library test 1
Executing on host: sh -c {./ld-new   -o tmpdir/vxworks1 -z norelro -L/home/mliska/Programming/binutils/ld/testsuite/ld-i386 tmpdir/libvxworks1.so -Tvxworks1.ld --hash-style=sysv -q --force-dynamic tmpdir/vxworks1.o  2>&1}  /dev/null ld.tmp (timeout = 300)
/home/mliska/Programming/binutils/bfd/elf32-i386.c:3615:21: runtime error: left shift of negative value -2
Comment 1 Alan Modra 2020-08-26 01:29:17 UTC
This one shows up in powerpc-wrs-vxworks too.
Comment 2 Sourceware Commits 2020-08-26 13:54:57 UTC
The master branch has been updated by Alan Modra <amodra@sourceware.org>:

https://sourceware.org/git/gitweb.cgi?p=binutils-gdb.git;h=1673aff56987e560ab429beba0d77b85a1c4e064

commit 1673aff56987e560ab429beba0d77b85a1c4e064
Author: Alan Modra <amodra@gmail.com>
Date:   Wed Aug 26 11:00:22 2020 +0930

    PR26458 UBSAN: elf32-i386.c:3615 left shift of negative value
    
    Happens when poking symbol index -2 into r_info.  (The index is
    updated before writing out to file.)
    
            PR 26458
            * elf/common.h (ELF32_R_INFO): Cast symbol index to unsigned.
Comment 3 Alan Modra 2020-08-26 14:38:09 UTC
Fixed