PR26458 UBSAN: elf32-i386.c:3615 left shift of negative value

Happens when poking symbol index -2 into r_info.  (The index is
updated before writing out to file.)

	PR 26458
	* elf/common.h (ELF32_R_INFO): Cast symbol index to unsigned.